--- a/index.html
+++ b/index.html
@@ -158,19 +158,19 @@
    <div class="row text-center">
     <ul>
       <li><a href="https://www.linkedin.com/in/drew-rarus-7108a194/">
-        <img src="C:\Users\18603\Desktop\Portfolio Project-1\iconmonstr-linkedin-3-120.png" alt="Linkedin">
+        <img src="iconmonstr-linkedin-3-120.png" alt="Linkedin">
       </a>
      </li>
      <li><a href="https://github.com/drewrarus">
-      <img src="C:\Users\18603\Desktop\Portfolio Project-1\GitHub-Mark-120px-plus.png" alt="GitHub">
+      <img src="GitHub-Mark-120px-plus.png" alt="GitHub">
     </a>
    </li>
    <li><a href="https://www.facebook.com/drew.rarus">
-    <img src="C:\Users\18603\Desktop\Portfolio Project-1\iconmonstr-facebook-4-120.png" alt="Facebook">
+    <img src="iconmonstr-facebook-4-120.png" alt="Facebook">
   </a>
  </li>
  <li><a href="https://twitter.com/drarus42">
-  <img src="C:\Users\18603\Desktop\Portfolio Project-1\iconmonstr-twitter-1-120.png" alt="Twitter">
+  <img src="iconmonstr-twitter-1-120.png" alt="Twitter">
 </a>
 </li>
  </ul>
