--- a/contact.html
+++ b/contact.html
@@ -140,6 +140,9 @@ i{
             <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Resume.pdf">Resume</a>
+              </li>  
           </form>
         </div>
       </nav>
