--- a/index.html
+++ b/index.html
@@ -3,85 +3,137 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+</head>
+<style>
+body{
+    margin:0;
+    padding: 0%;
+    font-family: sans-serif;
 
-    <title>About Me</title>
-
-    <style>
-
-    img {
-      border-radius: 50%;
-        }
-      li {
-          display: inline-block;
-          list-style-type: none;
-          padding-right: 20px;
-          margin: 20px;
-          background-size: cover;
-          background-position: center;
-      }
-
-      body {
-        background: url('https://c0.wallpaperflare.com/preview/709/28/834/charleston-united-states-sc-south-carolina.jpg') no-repeat center center fixed;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-       background-size: cover;
-       -o-background-size: cover;
-
-       }
-
-       .col-md-10 {
-  max-width: 700px;
-  margin: 20px auto;
 }
-
-.col-md-10::before {
-  content: "";
-  display: block;
-  width: 80%;
-  float: left;
-  height: 300px;
-  background: #fff0a0;
-  background: linear-gradient(150deg, #fff0a0 30%, rgba(9,9,121,0) 50%);
-  shape-outside: linear-gradient(150deg, #fff0a0 30%, rgba(9,9,121,0) 50%);
-  
+.container{
+    width: 100%;
+    height: 100vh; ;
+    overflow: hidden;
 }
+.container .column{
+    width: 25%;
+    height: 100%;
+    float: left;
+    border-right: 0
+    box-sizing: border-box;
+    z-index: 1;
+}
+.container .column:last-child{
+    border-right: none;
 
-.bubble {
-    background-color: #fff0a0;
-    background-image: -webkit-linear-gradient(top, hsla(0,0%,100%,.5), hsla(0,0%,100%,0));
-    background-image:    -moz-linear-gradient(top, hsla(0,0%,100%,.5), hsla(0,0%,100%,0));
-    background-image:     -ms-linear-gradient(top, hsla(0,0%,100%,.5), hsla(0,0%,100%,0));
-    background-image:      -o-linear-gradient(top, hsla(0,0%,100%,.5), hsla(0,0%,100%,0));
-    background-image:         linear-gradient(top, hsla(0,0%,100%,.5), hsla(0,0%,100%,0));
-    border-radius: 5px;
-    box-shadow: inset 0 1px 1px hsla(0,0%,100%,.5),
-                3px 3px 0 hsla(0,0%,0%,.1);
-    color: #333;
-    display: inline-block;
-    font: 16px/25px sans-serif;
-    padding: 15px 25px;
+}
+.container .column .content{
     position: relative;
-    text-shadow: 0 1px 1px hsla(0,0%,100%,.5);
+    height: 100%;
 }
-.bubble:after, .bubble:before {
-    border-bottom: 25px solid transparent;
-    border-right: 25px solid #fff0a0;
-    bottom: -25px;
-    content: '';
+
+.container .column .content h1{
     position: absolute;
-    right: 25px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    background:transparent;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    color: rgba(255, 255, 255, .2);
+    font-size: 15em;
+    border-top: transparent
+    border-bottom:transparent
 }
-.bubble:before {
-    border-right: 25px solid hsla(0,0%,0%,.1);
-    bottom: -28px;
-    right: 22px;
+
+.container .column .content .box{
+    position: absolute;
+    top: 50%;
+    transform: translateY(100%);
+    box-sizing: border-box;
+    padding: 40px;
+    background-color: rgba(255, 255, 255, 1);
+    text-align: center;
+    transition: 0.5s;
+    opacity: 0;
 }
-  </style>
-</head>   
-<body>
-    <!--Nav Bar-->
+
+.container .column.active .content .box{
+   opacity: 1;
+   transform: translateY(-50%);
+   border-radius: 30px/10px
+}
+
+.container .column .content h2{
+
+    margin: 0;
+    padding: 0;
+    color: #262626;
+    font-size: 30px;
+    font-style: italic;
+
+}
+
+.container .column .content p{
+
+color: #262626;
+font-size: 16px;
+box-shadow: royalblue;
+}
+.container .column .bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: -1;
+}
+
+.container .column.active .bg.bg1{
+
+    background: url(60004370_2204864622894299_6012193253569331200_o.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    transition: .5s
+}
+
+.container .column.active .bg.bg2{
+
+background: url(shutterstock_1239786037.jpg);
+background-size: cover;
+background-position: center;
+background-attachment: fixed;
+transition: .5s
+}
+
+.container .column.active .bg.bg3{
+
+background: url(LN84MPOT3B8A1479837745616.jpg);
+background-size: cover;
+background-position: center;
+background-attachment: fixed;
+transition: .5s
+}
+
+.container .column.active .bg.bg4{
+
+background: url(5d0150e06fc9200b5a05f042.jpg);
+background-size: cover;
+background-position: center;
+background-attachment: fixed;
+transition: .5s
+}
+
+
+
+</style>
+<header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Drew Rarus</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -99,84 +151,78 @@
             <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Resume.pdf">Resume</a>
+              </li>  
           </form>
         </div>
-      </nav>
-<!--Container-->
-      <Div class="container" style="color: black;" >
-<!--Bottom Picture and Text-->
-          <div class="col-md-10" style="padding-bottom: 10%; margin-top: 10px; border-radius: 16px; background-color: white;">
-            <img src="0.jpg" class="align-self-center mr-3" alt="Self"style="margin-right: 2000%">
-            <div class="media-body" style="margin-top: 10%;">
-              <h5 class="mt-0"style="margin-top: 10px;">About Me...</h5>
-<br>
-<br>
-              <p class ="bubble"style="justify-content: center;" >As of February 2020, I enrolled in Uconn Coding Bootcamp to enrich my computer skills and to become a full-stack web developer. We are currently working our way deeper into the stack.</p>
-<br>
-<br>
-                <p class ="bubble"style="justify-content: center;"style="border: 20px;"> As of now we have learned HTML, CSS, Javascript, and started working with Node! My background is in Biological Sciences where I obtained a BS in Biology at College of Charleston in 2015.
-                </p>
-<br>
-<br>
-                <p class ="bubble"style="justify-content: center;"> Check out some of links to my portfolio above or take a look at my resume or social media links below feel free to leave a message!
-                </p>
+
+
+
+</header>
+<body>
+    <div class="container">
+        <div class="column active">
+            <div class="content">
+                <h1>1</h1>
+                <div class="box">
+                    <h2>Uconn Coding Bootcamp</h2>
+                    <br>
+                    <p>As of February 2020, I enrolled in Uconn Coding Bootcamp to enrich my computer skills and to become a full-stack web developer. We are currently working our way deeper into the stack.</p>
+                </div>
+
+
+
             </div>
-            <br>
-            <br>
-            <p class ="bubble"style="justify-content: center;"> Here's the attachment! I'll update the more we learn from the course as we go along!<a href="Rarus - Resume.pdf">
-              <img src="icons8-document-50.png" alt=""style="margin-left: 45%" >
-            </a>
-          </p>
-          </div>
+            <div class="bg bg1"></div>
+        </div>
+        <div class="column">
+            <div class="content">
+                <h1>2</h1>
+                <div class="box">
+                    <h2>Languages</h2>
+                    <br>
+                    <p>Right now I'm in the process of learning HTML, CSS, JavaScript, jQuery, Express.js, React.js, Node.js, GIT, GitHub,
+                        Bootstrap, APIs, JSON, AJAX, MySQL, MongoDB, Responsive Design, Quality Assurance, and Deployment</p>
+                </div>
+
+
+            </div>
+            <div class="bg bg2"></div>
+        </div>
+        <div class="column">
+            <div class="content">
+                <h1>3</h1>
+                <div class="box">
+                    <h2>Computer Centered</h2>
+                    <br>
+                    <p> In my spare time you can generally find me on World of Warcraft on the weekends playing with friends or helping newer players hone their skills in the game. I've developed a keen interest in the Esports scene and can't wait to see where it goes!</p>
+                </div>
+
+
+            </div>
+            <div class="bg bg3"></div>
+        </div>
+        <div class="column">
+            <div class="content">
+                <h1>4</h1>
+                <div class="box ">
+                    <h2>Outdoors</h2>
+                    <br>
+                    <br>
+                    <p>I do try to find some time to get outdoors most likely playing tennis. Please feel free to check out my portfolio of some of the projects we've done so far or reach out on the contact tabs above! </p>    
+                </div>
+
+
+            </div>
+            <div class="bg bg4"></div>
+        </div>
+    </div>
     
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-<footer class="footer">
-  <div class="container-fluid"style="margin-left: 15%">
-   <div class="row text-center">
-    <ul>
-      <li><a href="https://www.linkedin.com/in/drew-rarus-7108a194/">
-        <img src="iconmonstr-linkedin-3-120.png" alt="Linkedin">
-      </a>
-     </li>
-     <li><a href="https://github.com/drewrarus">
-      <img src="GitHub-Mark-120px-plus.png" alt="GitHub">
-    </a>
-   </li>
-   <li><a href="https://www.facebook.com/drew.rarus">
-    <img src="iconmonstr-facebook-4-120.png" alt="Facebook">
-  </a>
- </li>
- <li><a href="https://twitter.com/drarus42">
-  <img src="iconmonstr-twitter-1-120.png" alt="Twitter">
-</a>
-</li>
- </ul>
-   </div>
-  </div>        
- </footer>
-
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.js"
+    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
+    <script>$(document).on('mouseover', '.container .column', function(){$(this) .addClass('active').siblings().removeClass('active')})</script> 
 </body>
 </html>
