--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
             </div>
             <div class="col-lg-5">
               <div class="card border-warning mb-3" style="width: 18rem;">
-               <a href="https://drewrarus.github.io/HW-Calendar/"><img src="C:\Users\18603\Desktop\Portfolio Project-1\Untitled_ Jun 15, 2020 4_03 PM.gif" class="card-img-top" alt="..."></a> 
+               <a href="https://drewrarus.github.io/HW-Calendar/"><img src="Untitled_ Jun 15, 2020 4_03 PM.gif" class="card-img-top" alt="..."></a> 
                 <div class="card-body">
                   <h5 class="card-title">Daily Planner</h5>
                   <p class="card-text">The goal of this project was to use moment js to create a dynamic planner that would show hours in the past, the current hour, and future hours for a given day.</p>
@@ -50,7 +50,7 @@
                 </div>
               </div>
               <div class="card border-warning mb-3" style="width: 18rem;">
-                <a href="https://drewrarus.github.io/Pass-Gen/"><img src="C:\Users\18603\Desktop\Portfolio Project-1\Untitled_ Jun 15, 2020 3_41 PM.gif" class="card-img-top" alt="..."></a>
+                <a href="https://drewrarus.github.io/Pass-Gen/"><img src="Untitled_ Jun 15, 2020 3_41 PM.gif" class="card-img-top" alt="..."></a>
                 <div class="card-body">
                   <h5 class="card-title">Password Generator</h5>
                   <p class="card-text">The goal of the project was to create a random password generator that utilized special characters, numbers, lowercase, and uppercase letters.</p>
